; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-kvm.c_exit_event_begin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-kvm.c_exit_event_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_evsel = type { i32 }
%struct.perf_sample = type { i32 }
%struct.event_key = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.perf_evsel*, %struct.perf_sample*, %struct.event_key*)* @exit_event_begin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exit_event_begin(%struct.perf_evsel* %0, %struct.perf_sample* %1, %struct.event_key* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.perf_evsel*, align 8
  %6 = alloca %struct.perf_sample*, align 8
  %7 = alloca %struct.event_key*, align 8
  store %struct.perf_evsel* %0, %struct.perf_evsel** %5, align 8
  store %struct.perf_sample* %1, %struct.perf_sample** %6, align 8
  store %struct.event_key* %2, %struct.event_key** %7, align 8
  %8 = load %struct.perf_evsel*, %struct.perf_evsel** %5, align 8
  %9 = call i64 @kvm_exit_event(%struct.perf_evsel* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.perf_evsel*, %struct.perf_evsel** %5, align 8
  %13 = load %struct.perf_sample*, %struct.perf_sample** %6, align 8
  %14 = load %struct.event_key*, %struct.event_key** %7, align 8
  %15 = call i32 @exit_event_get_key(%struct.perf_evsel* %12, %struct.perf_sample* %13, %struct.event_key* %14)
  store i32 1, i32* %4, align 4
  br label %17

16:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %17

17:                                               ; preds = %16, %11
  %18 = load i32, i32* %4, align 4
  ret i32 %18
}

declare dso_local i64 @kvm_exit_event(%struct.perf_evsel*) #1

declare dso_local i32 @exit_event_get_key(%struct.perf_evsel*, %struct.perf_sample*, %struct.event_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
